# FastApi-Template

./: .env.example  .gitignore  Makefile  README.md  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 2026_01_29_0954-fad9de0e649e_add_user_table.py
code_style/: .pre-commit-config.yaml  .pylintrc
src/api/: app.py
src/api/errors/: __init__.py  exceptions.py  handlers.py  schema.py
src/api/routers/v1/: __init__.py
src/api/routers/v1/auth/: __init__.py  cookie.py  routes.py
src/api/routers/v1/example/: __init__.py  example_of_protected_route.py
src/api/schemas/: base.py
src/api/schemas/auth/: __init__.py  login.py
src/auth/: __init__.py  domain.py  exceptions.py  jwt_utils.py  ldap_client.py  service.py
src/config/: __init__.py  settings.py
src/core/: logging_setup.py
src/db/: __init__.py  base.py  engine.py  mixins.py
src/db/models/: __init__.py
src/db/models/user/: __init__.py  user.py
src/db/repositories/app/: __init__.py
src/db/repositories/app/auth/: __init__.py  users.py
tests/: conftest.py  test_api_app.py  test_api_auth_routes.py  test_api_deps_database.py  test_api_errors.py  test_api_schemas.py  test_auth_cookie.py  test_auth_jwt_utils.py  test_auth_ldap_client.py  test_auth_service.py  test_config_settings.py  test_core_logging_setup.py  test_db_base.py  test_db_engine.py  test_db_mixins.py  test_db_repositories_auth_users.py  test_user_model.py
